Monotop section updated
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@108 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -118,6 +118,30 @@
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
+%Symbols for monotop
+\newcommand{\DMParticle}{\ensuremath{\chi}}
+\newcommand{\be}{\begin{equation}}
+\newcommand{\ee}{\end{equation}}
+\newcommand\bpm{\begin{pmatrix}}
+	\newcommand\epm{\end{pmatrix}}
+\def\bsp#1\esp{\begin{split}#1\end{split}}
+\renewcommand{\d}{{\rm d}} 
+\newcommand{\etc}{{\it etc.}}
+\newcommand{\ie}{{\it i.e.}}
+\newcommand{\eg}{{\it e.g.}}
+\newcommand{\lag}{{\cal L}} 
+\newcommand{\gmu}{\gamma^\mu}
+\newcommand{\feynrules}{{\sc FeynRules}}
+\newcommand{\madgraph}{{\sc MadGraph}}
+\newcommand{\madevent}{{\sc MadEvent}}
+\newcommand{\madanalysis}{{\sc MadAnalysis}}
+\newcommand{\fewz}{{\sc Fewz}}
+\newcommand{\hathor}{{\sc Hathor}}
+\newcommand{\pythia}{{\sc Pythia}}
+\newcommand{\tauola}{{\sc Tauola}}
+\newcommand{\delphes}{{\sc Delphes}}
+\newcommand{\fastjet}{{\sc FastJet}}
+
 
 \begin{document}
 
@@ -158,20 +182,20 @@
 \label{subsec:DMHFModels}
 \input{tex/DMHFModels}
 
-% \section{SUSY-inspired simplified models}
-% \label{subsec:SUSYModels}
-% \input{tex/SUSYModels}
-
+%% \section{SUSY-inspired simplified models}
+%% \label{subsec:SUSYModels}
+%% \input{tex/SUSYModels}
+%
 %\ifNotMonojetTTBarOnly
 \chapter{Validity of EFT approach}
 \label{sec:EFTValidity} 
 \input{tex/EFTValidity.tex}
 %\fi
-
-%% \chapter{Recommendations for expressing collider constraints}
-%% \label{sec:ColliderConstraints} 
-%% \input{tex/ColliderConstraints.tex}
-
+%
+%%% \chapter{Recommendations for expressing collider constraints}
+%%% \label{sec:ColliderConstraints} 
+%%% \input{tex/ColliderConstraints.tex}
+%
 \appendix
 
 %\ifNotMonojetTTBarOnly
