--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -141,6 +141,21 @@
 \newcommand{\tauola}{{\sc Tauola}}
 \newcommand{\delphes}{{\sc Delphes}}
 \newcommand{\fastjet}{{\sc FastJet}}
+\newcommand{\SUtwoUone}{\ensuremath{\mathrm{SU}(2)_{L} \times \mathrm{U}(1)_{Y}}\xspace}
+\newcommand{\SUtwo}{\ensuremath{\mathrm{SU}(2)_{L}}\xspace}
+\newcommand{\Lagr}{\ensuremath{\mathcal{L}}\xspace}
+\newcommand{\fmet}{\ensuremath{f_{\mathrm{met}}}\xspace}
+\newcommand{\met}{MET\xspace}
+\newcommand{\ares}{\ensuremath{a_{\mathrm{res}}}\xspace}
+\newcommand{\anonres}{\ensuremath{a_{\mathrm{non-res}}}\xspace}
+\newcommand{\Xnew}{\ensuremath{X_{\mathrm{new}}}\xspace}
+\newcommand{\BR}[2]{\ensuremath{\mathrm{BR}({#1} \to {#2})}\xspace}
+\newcommand{\ssll}{\ensuremath{\ell^{+}\ell^{+}}\xspace}
+\newcommand{\ttbarV}{\ensuremath{\ttbar V}\xspace}
+\def\mfmet{\ensuremath{m(f_{\mathrm{met}})}}
+\def\mvmet{\ensuremath{m(v_{\mathrm{met}})}}
+\def\vmet{\ensuremath{v_{\mathrm{met}}}}
+\def\fmet{\ensuremath{f_{\mathrm{met}}}}
 
 
 \begin{document}
