Text from Thomas
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@112 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -36,7 +36,7 @@
  \def\bea  {\begin{eqnarray}}   \def\eea  {\end{eqnarray}}
  \def\bean {\begin{eqnarray*}}  \def\eean {\end{eqnarray*}}
  \def\nn{\nonumber}
-
+\def\MCut{\ensuremath{M_\text{cut}}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%        	BEGIN DOCUMENT		   %%%%%%%%%%%%%%%
@@ -107,6 +107,22 @@ The resulting plots are shown in \cite{Racco:2015dxa} for a particular effective
 
 The advantage of this procedure is that the obtained bounds can be directly and easily recast in any  completion of the EFT, by computing the parameters $M_*$, $M_\text{cut}$ in the full model as functions of the parameters of the complete theory. On the other hand, the resulting limits will be weaker than those obtained using $\Qtr$ and a specific UV completion.
 
+\section{EFT validity recommendations} %change this title
+
+\section{Recommendation for contact interaction theories with simplified models available}
+
+...to be written...
+
+\section{Recommendation for truncation of theories with no simplified models available}
+
+\MCut is related to physical couplings and masses only in a UV complete theory, and so is effectively a free parameter. It makes sense to choose \MCut such that we identify the transition region where the EFT stops being a good description of UV complete theories. This can be done using R, which is defined as the fraction of events for which $\hat{s} > \MCut ^2$. 
+
+For large values of \MCut, no events are thrown away in the truncation procedure, and R=1. As \MCut becomes smaller, eventually all events are thrown away in the truncation procedure, i.e. R=0, and the EFT gives no exclusion limits for the chosen acceptance.  
+
+We propose a rough scan over \MCut, such that we find the values of \MCut for which R ranges from, say, 0.1 to 1. We can then perform a scan over (several, your choice) values of \MCut, showing the truncated limit for each one. 
+
+When R=0, there is no limit. When R reaches 1, the truncated limit is identical to the original limit. 
+%(<== These last two sentences may be overkill. Cut it if you think this is already clear)
 
  % \begin{thebibliography}{1}
 
