--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -365,7 +365,12 @@ shown in Fig.~\ref{fig:DMV_EW_kinematics}.
 
 \subsection{Specific simplified models}
 
-Mono-Higgs, to be completed...
+%monoH, Linda
+\cite{Carpenter:2013xra}
+%monoH, Shepherd
+\cite{Petrov:2013nia}
+%2HDM
+\cite{Berlin:2014cfa}
 
 %%%
 
