--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -161,6 +161,36 @@
       SLACcitation   = "%%CITATION = ARXIV:1312.2592;%%",
 }
 
+@article{Petrov:2013nia,
+	author         = "Petrov, Alexey A. and Shepherd, William",
+	title          = "{Searching for dark matter at LHC with Mono-Higgs
+	production}",
+	journal        = "Phys.Lett.",
+	volume         = "B730",
+	pages          = "178-183",
+	doi            = "10.1016/j.physletb.2014.01.051",
+	year           = "2014",
+	eprint         = "1311.1511",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "WSU-HEP-1308",
+	SLACcitation   = "%%CITATION = ARXIV:1311.1511;%%",
+}
+
+@article{Berlin:2014cfa,
+	author         = "Berlin, Asher and Lin, Tongyan and Wang, Lian-Tao",
+	title          = "{Mono-Higgs Detection of Dark Matter at the LHC}",
+	journal        = "JHEP",
+	volume         = "1406",
+	pages          = "078",
+	doi            = "10.1007/JHEP06(2014)078",
+	year           = "2014",
+	eprint         = "1402.7074",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1402.7074;%%",
+}
+
 @article{Bai:2012xg,
       author         = "Bai, Yang and Tait, Tim M.P.",
       title          = "{Searches with Mono-Leptons}",
