--- a/doc/frontmatter.tex
+++ b/doc/frontmatter.tex
@@ -1,3 +1,10 @@
+\svnidlong
+{$HeadURL: $}
+{$LastChangedDate: $}
+{$LastChangedRevision: $}
+{$LastChangedBy: $}
+\svnid{$Id: $}
+
 % the title page and front matter
 
 \thispagestyle{empty}% suppress header for this page
