--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,10 +1,17 @@
-\documentclass[a4,debug,notitlepage,nobib]{tufte-book}
+\documentclass[a4paper,debug,notitlepage,nobib]{tufte-book}
 
 %%%%%%%%%%%%%
 %Compilation options
 %%%%%%%%%%%%%
 %\newif\ifNotMonojetTTBarOnly
 
+\usepackage[autokw=all]{svn-multi}[2015/05/12]
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id$}
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
@@ -52,12 +59,11 @@
   \end{fullwidth}
 }
 \newcommand{\blankpage}{\newpage\hbox{}\thispagestyle{empty}\newpage}
-
+\newcommand{\svnfooter}{Last Changed Rev: \svnfilerev}
 \makeatletter
 \title{ATLAS+CMS Dark Matter Forum Recommendations} 
 \author{ATLAS+CMS Dark Matter Forum}
 \date{\today}
-
 \usepackage{titling}
 
 %FIXME: interaction with front/backmatter?
