fwang: mono-jet like model update
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@121 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -645,3 +645,34 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1404.6528;%%",
 }
+
+@article{Alwall:1405.0301,
+      author         = "J. Alwall and others",
+      title          = "{The automated computation of tree-level and next-to-leading order 
+		  differential cross sections, and their matching to parton shower simulations}",
+      journal        = "JHEP",
+      number         = "2",
+      volume         = "07",
+      pages          = "079",
+      year           = "2014",
+      eprint         = "1405.0301",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1405.0301;%%",
+}
+
+@article{Alwall:0706.2569,
+      author         = "J. Alwall and others",
+      title          = "{Comparative study of various algorithms for the merging of 
+		  parton showers and matrix elements in hadronic collisions}",
+      journal        = "Eur.Phys.J.",
+      number         = "2",
+      volume         = "C53",
+      pages          = "473-500",
+      doi            = "10.1140/epjc/s10052-007-0490-5",
+      year           = "2008",
+      eprint         = "0706.2569",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0706.2569;%%",
+}
