--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -2,8 +2,7 @@
 \section{CKKW parton matching implementation}
 \label{sec:monojet_parton_match}
 
-The parton matching techniques are implemented in the mono-jet like MC generation in order to avoid double counting the partons from matrix elements and parton showering. The CKKW matching is better developed and preferred in this study. As the illustration sample, the EFT D5 samples are generated with \texttt{MadGraph5\_aMC@NLO} version 2.2.2. The technical implementations are shown as below.
-%TODO: Add references
+The parton matching techniques are implemented in the mono-jet like MC generation in order to avoid double counting the partons from matrix elements and parton showering. The CKKW matching is better developed and preferred~\cite{Alwall:1405.0301}~\cite{Alwall:0706.2569}. As the illustration sample, the EFT D5 samples are generated with \texttt{MadGraph5\_aMC@NLO} version 2.2.2. The technical implementations are shown as below.
 
 On the generator side, i.e., \texttt{MadGraph5\_aMC@NLO}:
 \begin{itemize}
@@ -111,18 +110,19 @@ The MC distributions for the missing transverse energy and transverse momenta fo
 
 \begin{figure}[h!]
 	\centering  
-	\subfloat[Missing transverse momentum]{%
+%	\subfloat[Missing transverse momentum]{%
     \includegraphics[width=0.8\linewidth]{figures/monojet_appendix/MET_matching80.pdf}
-	}
-	\hfill
-	\subfloat[Transverse momentum of leading jet]{%
-    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/jet1pt_matching80.pdf}
-	}
-	\hfill
-	\subfloat[Transverse momentum of subleading jet]{%
-    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/MET_matching80.pdf}
-	}
-	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
+%	}
+%	\hfill
+%	\subfloat[Transverse momentum of leading jet]{%
+%    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/jet1pt_matching80.pdf}
+%	}
+%	\hfill
+%	\subfloat[Transverse momentum of subleading jet]{%
+%    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/jet2pt_matching80.pdf}
+%	}
+%	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
+	\caption{Missing transverse momentum distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
 	\label{fig:Kine_D5_80}
 \end{figure}
 
@@ -133,42 +133,42 @@ In order to describe the signal kinematics correctly and save time in MC generat
 
 It is found that the 3- or more-parton emission cases are negligible in our intersted regions, but the 2-parton emission case has significant contributions. The 0- and 1-parton emissions are out of discussion since they give the baseline signature in this analysis. The impacts of 2- and 3-parton emissions are quantified in this section.
 
-Here the 0-, 1-, 2- and 3-parton emissions are generated separately and requested in matching step with \texttt{Merging:nJetMax=3} and scale at 80 GeV in Pythia8for 0+1+2+3 parton emission case, while \texttt{Merging:nJetMax=2} requested for 0+1+2 case and \texttt{Merging:nJetMax=1} requested for 0+1 case. The kinematic distributions for MET, leading and subleading jet transverse momenta are plotted in Fig.\ref{fig:RatioKine_D5}, while the jet multiplicity at different leading jet transverse momentum cuts is shown in Fig.\ref{fig:RatioKine_D5_2}.
+Here the 0-, 1-, 2- and 3-parton emissions are generated separately and requested in matching step with \texttt{Merging:nJetMax=3} and scale at 80 GeV in Pythia8for 0+1+2+3 parton emission case, while \texttt{Merging:nJetMax=2} requested for 0+1+2 case and \texttt{Merging:nJetMax=1} requested for 0+1 case. The MET distribution is plotted in Fig.\ref{fig:RatioKine_D5}, while the jet multiplicity is shown in Fig.\ref{fig:RatioKine_D5_2}.
 
 \begin{figure}[h!]
 	\centering  
-	\subfloat[Missing transverse momentum]{%
-		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_MET_MET250.pdf}
-	}
-	\hfill
-	\subfloat[Transverse momentum of leading jet]{%
-    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt1_MET250.pdf}
-	}
-	\hfill
-	\subfloat[Transverse momentum of subleading jet]{%
-		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt2_MET250.pdf}
-	}
-	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton 
-		emission cases are generated separatedly and added together by cross sections.}
+%	\subfloat[Missing transverse momentum]{%
+	\includegraphics[width=0.8\linewidth]{figures/monojet_appendix/h_MET_MET250.pdf}
+%	}
+%	\hfill
+%	\subfloat[Transverse momentum of leading jet]{%
+%		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt1_MET250.pdf}
+%	}
+%	\hfill
+%	\subfloat[Transverse momentum of subleading jet]{%
+%		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt2_MET250.pdf}
+%	}
+%	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton emission cases are generated separatedly and added together by cross sections.}
+	\caption{Missing transverse momentum distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton emission cases are generated separatedly and added together by cross sections.}
 	\label{fig:RatioKine_D5}
 \end{figure}
 
 
 \begin{figure}[h!]
 	\centering  
-	\subfloat[Jet multiplicity, leading jet $p_{T}>30$ GeV]{%
-    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet30.pdf}
-	}
-	\hfill
-	\subfloat[Jet multiplicity, leading jet $p_{T}>80$ GeV]{%
-    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet80.pdf}
-	}
-	\hfill
-	\subfloat[Jet multiplicity, leading jet $p_{T}>250$ GeV]{%
-    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet250.pdf}
-	}
-	\caption{Jet multiplicity distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton 
-		emission cases are generated separatedly and added together by cross sections.}
+%	\subfloat[Jet multiplicity, leading jet $p_{T}>30$ GeV]{%
+%    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet30.pdf}
+%	}
+%	\hfill
+%	\subfloat[Jet multiplicity, leading jet $p_{T}>80$ GeV]{%
+%    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_njet80.pdf}
+%	}
+%	\hfill
+%	\subfloat[Jet multiplicity, leading jet $p_{T}>250$ GeV]{%
+	\includegraphics[width=0.8\linewidth]{figures/monojet_appendix/h_njet250.pdf}
+%	}
+%	\caption{Jet multiplicity distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton emission cases are generated separatedly and added together by cross sections.}
+	\caption{Jet multiplicity distribution for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1-, 2- and 3-parton emission cases are generated separatedly and added together by cross sections.}
 	\label{fig:RatioKine_D5_2}
 \end{figure}
 
